--- a/restaurant/templates/restaurant/base.html
+++ b/restaurant/templates/restaurant/base.html
@@ -6,7 +6,7 @@
    <title>{% block title %}Restaurant App{% endblock %}</title>
 
 
-   <link rel="stylesheet" href="{% static 'styles4.css' %}">
+   <link rel="stylesheet" href="{% static 'styles.css' %}">
 
 
 </head>
