--- a/static/styles4.css
+++ b/static/styles4.css
@@ -70,12 +70,10 @@ nav ul li a:hover {
     border-radius: 4px; 
 }
 
-form {
+.center-form {
     display: flex;
     flex-direction: column;
-    align-items: center; 
-    text-align: center; 
-    margin: 0 auto; 
+    align-items: center;
+    text-align: center;
 }
-
 
