--- a/mini_fb/templates/mini_fb/base.html
+++ b/mini_fb/templates/mini_fb/base.html
@@ -17,9 +17,9 @@
 
    <!-- Navigation Bar -->
    <nav>
-       <ul>
-        
-       </ul>
+    <ul>
+        <li><a href="{% url 'show_all_profiles' %}">All Profiles</a></li> <!-- Link to the All Profiles page -->
+    </ul>
    </nav>
 
 
