pushing after finishing Task 3

--- a/mini_fb/templates/mini_fb/base.html
+++ b/mini_fb/templates/mini_fb/base.html
@@ -19,6 +19,7 @@
    <nav>
     <ul>
         <li><a href="{% url 'show_all_profiles' %}">All Profiles</a></li> <!-- Link to the All Profiles page -->
+        <li><a href="{% url 'create_profile' %}">Create New Profile</a></li> <!-- Link to the Create A Profile page -->
     </ul>
    </nav>
 
