--- a/blog/templates/blog/show_all.html
+++ b/blog/templates/blog/show_all.html
@@ -10,7 +10,7 @@
     <article> <!-- was <div> -->
         
         <a href="{% url 'article' a.pk %}"> <!-- use object instance.pk -->
-            <img src="{{a.image_url}}" alt="{{a.image_url}}">
+            <img src="{{a.image_file.url}}" alt="{{a.image_file.url}}"> <!-- NEW on 10/17 -->
         </a>
 
         <div> <!-- added this! -->
