--- a/mini_fb/templates/mini_fb/base.html
+++ b/mini_fb/templates/mini_fb/base.html
@@ -20,6 +20,12 @@
     <ul>
         <li><a href="{% url 'show_all_profiles' %}">All Profiles</a></li> <!-- Link to the All Profiles page -->
         <li><a href="{% url 'create_profile' %}">Create New Profile</a></li> <!-- Link to the Create A Profile page -->
+
+        <!-- Conditionally visible link for News Feed -->
+        {% if current_profile %}
+            <li><a href="{% url 'news_feed' pk=current_profile.pk %}">News Feed</a></li>
+        {% endif %}
+
     </ul>
    </nav>
 
