pushing after finishing assignment 9 task 1

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,6 +16,21 @@
             <a href="{% url 'show_all' %}">Show All</a>
             <a href="{% url 'random' %}">Random</a>
         </ul>
+
+        <p>
+            <!-- URLS that require authentication -->
+            {% if request.user.is_authenticated %}
+                <a href="{% url 'create_article' %}">Create Article</a>
+                <form method="POST", action="{% url 'logout' %}">
+                    {% csrf_token %}
+                    <input type="submit", value="Logout">
+                </form>
+                
+            <!-- URLS to login -->
+            {% else %}
+                <a href="{% url 'login' %}">Login</a>
+            {% endif %}
+        </p>
     </nav>
 
     {% block content %}
