--- a/mini_fb/templates/mini_fb/create_profile_form.html
+++ b/mini_fb/templates/mini_fb/create_profile_form.html
@@ -4,17 +4,25 @@
 <h1>Create a New Profile</h1>
 
 <form method="POST">
+    {% csrf_token %}
+
+    <h2>User Registration</h2>
+    <table>
+        {{ user_form.as_table }}  
+    </table>
+
+    <h2>Profile Creation</h2>
     <table>
         {{ form.as_table }} 
-
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Create Profile">
-                {% csrf_token %} 
-            </td>
-        </tr>
     </table>
+
+    <tr>
+        <td></td>
+        <td>
+            <input type="submit" value="Create Profile">
+        </td>
+    </tr>
 </form>
 
 {% endblock %}
+
